kubedeploy/kubedeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedeploy
  namespace: kubedeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedeploy
  template:
    metadata:
      labels:
        app: kubedeploy
    spec:
      serviceAccountName: kubedeploy-sa
      containers:
      - name: kubedeploy-container
        image: docker.prayujt.com/kubedeploy
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubedeploy
  namespace: kubedeploy
spec:
  selector:
    app: kubedeploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
