kubedeploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedeploy-ingress
  namespace: kubedeploy
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - deploy.prayujt.com
    secretName: deploy-prayujt-certs
  rules:
  - host: deploy.prayujt.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kubedeploy
            port:
              number: 8080
